# LP

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  LICENSE.md  README.md  pre-migration-deps.txt
.cargo/: config.toml
.github/: code_of_conduct.md  contributing.md  funding.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml
LP/: LICENSE.md  LP.sln  creature_body.tscn  limb.tscn  limb_socket.tscn  logo.png.import  mouse_tracker.gd  new_creature.tscn  project.godot  sam441F.tmp  target_controller.gd  test_creature.tscn
LP/Entities/Ant/: AntAbdomen.tscn  AntFoot.tscn  AntHead.tscn  New Ant Explosheet 2.png.import  New Ant Explosheet.png.import  New Ant No Outline.png.import
LP/Entities/ExampleEntity/: ExampleEntityScene.tscn
LP/[demo scene for movement, to be deleted]/: creature.tscn  creature2.tscn  sample_scene.tscn
LP/addons/attachmentgui/: AttachmentEditor.gd  AttachmentGUIDock.tscn  AttachmentGui.gd  CreatureCreate.tscn  attachment_gui_dock_control.gd  attachment_gui_mainlabel.tres  attachment_gui_smalllabel.tres  attachmentgui.gd  button01.png.import  create_button.gd  eyetarget.png.import  limb1.png.import  plugin.cfg  scale_horizontal.png.import  scale_vertical.aseprite  scale_vertical.png.import  socket.png.import
LP/addons/behaviour_tree_action_creator/: NewBTActionScene.tscn  behaviour_tree_action_creator.gd  new_bt_action_scene.gd  plugin.cfg
LP/assets/scenes/: debug.tscn  population_dynamics_example.tscn  save_example.tscn
LP/components/: HealthComponent.gd  MovementComponent.gd  ThermodynamicsComponent.gd
LP/data/entities/: TestAnimal.tres  TestPlant.tres  entities.json
LP/entities/components/: DNAComponent.gd  GrowthComponent.gd  MovementComponent.gd  ThermodynamicsComponent.gd
LP/entities/cosmetics/: AntAntennae.tscn  AntMandible.tscn  ant_antennae.png.import  ant_mandible.png.import
LP/scenes/: save_example.tscn
LP/scenes/base_scenes/: Animal.tscn  Plant.tscn
LP/scripts/: debug.gd
LP/scripts/life/: LifeAttributes.gd
LP/scripts/misc/: move_marker_to_cursor.gd
LP/scripts/non_life/: NonLifeAttributes.gd
LP/shaders/: Fluids.gdshader  LSystem.gdshader
LP/systems/: test_entity.tscn
LP/systems/ai/: Blackboard.cs
LP/systems/attachment system/: attachment_socket.gd  creature_body.tscn  limb.tscn  limb1.png.import  limb_socket.tscn  new_creature.tscn  socket.png.import
LP/systems/behaviour_tree/: BehaviourTree.cs  Blackboard.cs  Entity.cs  bt_test_scene.tscn
LP/systems/dna_system/: GeneticAttributes.gd
LP/systems/movement/: Leg.gd  LimbBase.gd  body.gd
LP/systems/population_dynamics/: PopulationDynamics.gd  (+2 more)
crates/: lp_tree.txt
crates/energy/: Cargo.toml  README.md
crates/energy/acoustics/: Cargo.toml
crates/energy/electromagnetic/: Cargo.toml
crates/energy/electromagnetic/src/: fields.rs  interactions.rs  lib.rs
crates/energy/electromagnetism/: Cargo.toml
crates/energy/electromagnetism/src/: lib.rs
crates/energy/src/: conservation.rs  lib.rs  pairwise.rs
crates/energy/src/electromagnetism/: charges.rs  fields.rs  interactions.rs  mod.rs
crates/energy/src/thermodynamics/: entropy.rs  equilibrium.rs  mod.rs  thermal.rs
crates/energy/src/waves/: mod.rs  oscillation.rs  propagation.rs  superposition.rs  wave_equation.rs
crates/energy/thermodynamics/: Cargo.toml
crates/energy/thermodynamics/src/: entropy.rs  equilibrium.rs  lib.rs  thermal.rs
crates/energy/waves/: Cargo.toml
crates/energy/waves/src/: lib.rs  oscillation.rs  propagation.rs  superposition.rs  wave_equation.rs
crates/fluids/: Cargo.toml
crates/forces/: Cargo.toml  README.md
crates/information/: Cargo.toml  README.md
crates/information/fractals/: Cargo.toml
crates/information/fractals/src/: data_loader.rs  fractals.rs  generator.rs  interpreter.rs  lib.rs  renderer.rs
crates/information/src/: lib.rs
crates/information/src/fractals/: core.rs  data_loader.rs  fractals.rs  generator.rs  grammar.rs  interpreter.rs  mod.rs  renderer.rs
crates/information/src/measures/: divergence.rs  estimators.rs  knn_estimators.rs  mod.rs  shannon.rs
crates/information/src/measures/mutual/: calculation.rs  mod.rs
crates/l_system/: Cargo.toml
crates/l_system/src/: data_loader.rs  fractals.json  generator.rs  interpreter.rs  lib.rs  lsystem.rs  renderer.rs
crates/matter/: Cargo.toml  README.md
crates/matter/states/: Cargo.toml
crates/matter/states/fluids/: Cargo.toml
crates/matter/states/gases/: Cargo.toml
crates/matter/states/plasma/: Cargo.toml
crates/matter/states/solids/: Cargo.toml
crates/save_system/: Cargo.toml
crates/spacetime/: Cargo.toml
crates/systems/: Cargo.toml  README.md
crates/systems/acoustics/: Cargo.toml
crates/systems/acoustics/src/: lib.rs
crates/systems/ai/: Cargo.toml  README.md
crates/systems/ai/src/: lib.rs
crates/systems/ai/src/arbiter/: mod.rs
crates/systems/ai/src/core/: actions.rs  choices.rs  controller.rs  evaluators.rs  interfaces.rs  measures.rs  mod.rs  pickers.rs  scorers.rs  thinkers.rs  utility.rs
crates/systems/ai/src/drives/: mod.rs  needs.rs
crates/systems/ai/src/memory/: mod.rs  types.rs
crates/systems/ai/src/personality/: mod.rs  traits.rs
crates/systems/ai/src/relationships/: mod.rs  social.rs
crates/systems/ai/src/trackers/: base_tracker.rs  electric_tracker.rs  entity_tracker.rs  mod.rs  needs_tracker.rs  perception_tracker.rs  prelude.rs  prey_tracker.rs  thermal_tracker.rs  threat_tracker.rs
crates/systems/audio/: Cargo.toml
crates/systems/mpm/: Cargo.toml
crates/systems/mpm/src/: lib.rs
crates/systems/pbmpm/: Cargo.toml
crates/systems/pbmpm/src/: lib.rs
crates/systems/save_system/: Cargo.toml
crates/systems/save_system/src/: lib.rs  save_system.rs  versioning.rs
crates/systems/src/: lib.rs
crates/utils/: Cargo.toml  README.md
examples/: basic_ai.rs  basic_electromagnetism.rs  basic_forces.rs  basic_mpm.rs  basic_plant.rs  basic_save.rs  basic_thermodynamics.rs  minimal_schedule_test.rs  object_pooling.rs  plant_example.rs  unified_index_smoke.rs
(+226 files in other folders)
