[package]
name = "LP"
version = "0.1.0"
edition = "2021"
description = "A systemic 2D platformer in a dynamic living ecosystem.."
license = "AGPL-3.0"

[workspace]
members = [
    "crates/l_system"
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]

l_system = { path = "crates/l_system" }

bevy = "0.15.1"

glam = "0.29.2"

# Serde for serialization and deserialization
serde = "1.0"

# Serde JSON for JSON serialization and deserialization
serde_json = "1.0"

# rand for picking random values
rand = "0.9"