[package]
name = "LP"
version = "0.1.0"
edition = "2024"
description = "A systemic 2D platformer in a dynamic living ecosystem.."
license = "Apache-2.0"

[workspace]
members = [
    "crates/systems",
    "crates/energy",
    "crates/forces",
    "crates/information",
    "crates/matter",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]

systems = { path = "crates/systems" }
energy = { path = "crates/energy" }
forces = { path = "crates/forces" }
information = { path = "crates/information" }
matter = { path = "crates/matter" }

bevy = "0.16"

glam = "0.29.2"

# Serde for serialization and deserialization
serde = "1.0"

# Serde JSON for JSON serialization and deserialization
serde_json = "1.0"

# rand for picking random values
rand = "0.9"