[package]
name = "energy"
version = "0.1.0"
edition = "2021"
description = "Core systems governing how energy manifests, transforms and flows."

[dependencies]
bevy = "0.15"

waves = { path = "./waves" }
electromagnetism = { path = "./electromagnetism" }
thermodynamics = { path = "./thermodynamics" }
