[package]
name = "information"
version = "0.1.0"
edition = "2024"
description = "Systems handling pattern emergence, complexity formation, and the organization principles that enable order from chaos."

[dependencies]

bevy = "0.17"



# Serde for serialization and deserialization
serde = "1.0"

# Serde JSON for JSON serialization and deserialization
serde_json = "1.0"
