[package]
name = "information"
version = "0.1.0"
edition = "2024"
description = "Systems handling pattern emergence, complexity formation, and the organization principles that enable order from chaos."
license = "MIT OR Apache-2.0"

[dependencies]

bevy = "0.18"



# Serde for serialization and deserialization
serde = "1.0"

# Serde JSON for JSON serialization and deserialization
serde_json = "1.0"
