[package]
name = "l_system"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.29.2"

bevy = "0.15"

# Bevy Prototype Lyon for 2D shapes temporary until future Bevy release handles necessary needs.
bevy_prototype_lyon = "0.13"

# Bevy-compatible random number generation
bevy_rand = { version = "0.9.0", features = ["rand_chacha"] }

# Random number generation core traits
rand_core = "0.6.4"

# Serde for serialization and deserialization
serde = "1.0"

# Serde JSON for JSON serialization and deserialization
serde_json = "1.0"