[package]
name = "systems"
version = "0.1.0"
edition = "2024"
description = "Core simulation infrastructure components that manage and support the virtual universe rather than represent parts of it."

[dependencies]
bevy = "0.17"
save_system = { path = "./save_system" }
mpm = { path = "./mpm" }
acoustics = { path = "./acoustics" }
ai = { path = "./ai" }
