[package]
name = "systems"
version = "0.1.0"
edition = "2024"
description = "Core simulation infrastructure components that manage and support the virtual universe rather than represent parts of it."
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.18"
save_system = { path = "./save_system" }
mpm = { path = "./mpm" }
acoustics = { path = "./acoustics" }
ai = { path = "./ai" }
