[package]
name = "fractals"
version = "0.1.0"
edition = "2021"
description = "Self-similar pattern generation and analysis for complex information structures."

[dependencies]
bevy = "0.15"

# Bevy Prototype Lyon for 2D shapes temporary until future Bevy release handles necessary needs.
bevy_prototype_lyon = "0.13"


# Serde for serialization and deserialization
serde = "1.0"

# Serde JSON for JSON serialization and deserialization
serde_json = "1.0"