[package]
name = "states"
version = "0.1.0"
edition = "2021"
description = "Collection of fundamental matter states with their unique physical properties and behaviors."

[dependencies]
solids = { path = "./solids" }
fluids = { path = "./fluids" }
gases = { path = "./gases" }
plasma = { path = "./plasma" }