[package]
name = "ai"
version = "0.1.0"
edition = "2024"
description = "Utility-based AI framework for life form simulation with modular drives, memory, personality and relationships"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
bevy = "0.18"
rand = "0.9"
energy = { path = "../../energy" }


[features]
trace = []
