[package]
name = "save_system"
version = "0.1.0"
edition = "2024"
description = "Framework for preserving and restoring simulation states across sessions."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy = "0.18"
platform-dirs = "0.3"
